Add "sello para muebles de carga" tab

--- a/src/app/pages/products/doors/doors.component.html
+++ b/src/app/pages/products/doors/doors.component.html
@@ -1,1 +1,226 @@
-<p>Work</p>
+<!-- Nav tabs -->
+<div class="card	">
+    <ul class="nav nav-tabs" role="tablist">
+        <li role="presentation" class="active"><a href="#sello_muelle" aria-controls="sello_muelle" role="tab" data-toggle="tab">Sellos para Muelle de carga</a>
+        </li>
+        <li role="presentation"><a href="#puerta_rapida" aria-controls="puerta_rapida" role="tab" data-toggle="tab">Puerta Rápida Enrollable</a>
+        </li>
+        <li role="presentation"><a href="#abrigo_muelle" aria-controls="abrigo_muelle" role="tab" data-toggle="tab">Abrigos para Muelle de carga</a>
+        </li>
+    </ul>
+    <!-- Tab panes -->
+    <div class="tab-content">
+        <div role="tabpanel" class="tab-pane active" id="sello_muelle">
+            <section class="no-mb">
+                <div class="jumbotron">
+                    <div class="dark-mask"></div>
+                    <div class="container">
+                        <div class="row mb-small">
+                            <div class="col-sm-12 text-center">
+                                <h1>SELLO PARA MUELLES DE CARGA</h1>
+                            </div>
+                        </div>
+                        <div class="row vertical_center_col">
+                            <div class="col-md-6 text-center">
+                                <img src="assets/img/template-easy-customize.png" alt="" class="img-responsive">
+                            </div>
+                            <div class="col-md-6">
+                                <h2 class="text-uppercase">¿Por qué usarlo?</h2>
+                                <p class="mb-small">Ofrece el sellado óptimo entre la parte trasera del camión y las paredes alrededor del vano de la puerta para garantizar la separación de ambientes, entre la intemperie, el interior del camión y el área de trabajo. El proceso se realiza automáticamente a medida que el camión presiona el sello y se acopla al muelle de carga.</p>
+                                <br>
+                                <p class="mb-small">Los Sellos para muelle de carga son elementos básicos y de gran utilidad en los patios de maniobra. Éstos se pueden instalar en centros de distribución nuevos o adaptar en las plantas existentes.</p>
+                                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="no-mb">
+                <div class="jumbotron">
+                    <div class="dark-mask custom_dark_mask"></div>
+                    <div class="container">
+                        <div class="row vertical_center_col">
+                            <div class="col-md-6">
+                                <h2 class="text-uppercase">BENEFICIOS</h2>
+                                <ul type=d isk style="font-size: 21px; font-weight: 400">
+                                    <li> Los sellos para muelle evitan fugas de temperatura, entrada de aire, agua, polvo, insectos, etc. </li>
+                                    <br>
+                                    <li> Son útiles para proteger y reducir hurto durante la carga y descarga de materiales o productos. </li>
+                                    <br>
+                                    <li> Reduce las pérdidas energéticas gracias a la separación efectiva de ambientes. </li>
+                                    <br>
+                                    <li> Protege el producto y al personal de condiciones ambientales. </li>
+                                    <br>
+                                </ul>
+                                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a>
+                                </p>
+                            </div>
+                            <div class="col-md-6 text-center">
+                                <img src="assets/img/template-easy-customize.png" alt="" class="img-responsive">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="no-mb">
+                <div class="jumbotron">
+                    <div class="dark-mask"></div>
+                    <div class="container">
+                        <div class="row vertical_center_col">
+                            <div class="col-md-6 text-center">
+                                <img src="assets/img/template-easy-customize.png" alt="" class="img-responsive">
+                            </div>
+                            <div class="col-md-6">
+                                <h2 class="text-uppercase">PARTES</h2>
+                                <ul type=d isk style="font-size: 21px; font-weight: 400">
+                                    <li> 2 Postes Verticales </li>
+                                    <br>
+                                    <li> 1 Travesaño Horizontal (Parte superior) </li>
+                                    <br>
+                                    <li> 1 Travesaño Horizontal con topes internos (Parte inferior) </li>
+                                    <br>
+                                    <li> 1 Lona de Recubrimiento Superior </li>
+                                    <br>
+                                    <li> Cubierta removible con elementos de fijación de alta calidad </li>
+                                    <br>
+                                </ul>
+                                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="no-mb">
+                <div class="jumbotron">
+                    <div class="dark-mask custom_dark_mask"></div>
+                    <div class="container">
+                        <div class="row vertical_center_col">
+                            <div class="col-md-6">
+                                <h2 class="text-uppercase">ALETAS DE DESGASTE</h2>
+                                <p class="mb-small">Para aumentar la vida útil de los sellos, se implementan aletas superpuestas a lo largo de las columnas aterales. Estas aletas absorben la abrasión que se produce en áreas de alto desgaste protegiendo las almohadillas del sello.</p>
+                                <br>
+                                <p class="mb-small">Las solapas de desgaste se encuentran disponibles con una exposición de:</p>
+                                <br>
+                                <ul class="list-inline" type=d isk style="font-size: 21px; font-weight: 400">
+                                    <li> ■ 10 cm </li>
+                                    <li> ■ 15 cm </li>
+                                    <li> ■ 20cm </li>
+                                </ul>
+                                <br>
+                                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a>
+                                </p>
+                            </div>
+                            <div class="col-md-6 text-center">
+                                <img src="assets/img/template-easy-customize.png" alt="" class="img-responsive">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="no-mb">
+                <div class="jumbotron">
+                    <div class="dark-mask"></div>
+                    <div class="container">
+                        <div class="row vertical_center_col">
+                            <div class="col-sm-12 text-center">
+                                <h2 class="text-uppercase">COMPENSACIÓN DE DESNIVEL</h2>
+                                <p class="mb-small">La fabricación de cada sello para muelle de carga, se realiza especifícamente para satisfacer las condiciones de inclinación o declinación de la zona.</p>
+                                <br>
+                                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="row vertical_center_col">
+                            <div class="col-md-12 text-center">
+                                <img src="assets/img/template-easy-customize.png" alt="" class="img-responsive" style="display: inline;">>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="no-mb">
+                <div class="jumbotron">
+                    <div class="dark-mask custom_dark_mask"></div>
+                    <div class="container">
+                        <div class="row vertical_center_col">
+                            <div class="col-md-6">
+                                <h2 class="text-uppercase">CUBIERTA REMOVIBLE</h2>
+                                <p class="mb-small">Las aletas de desgaste se encuentran dispuestas en una cubierta removible; con elementos de fijación de alta calidad. Lo cual permite el reemplazo de partes por daño o desgaste, sin realizar el desmonte del sello.</p>
+                                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a>
+                                </p>
+                            </div>
+                            <div class="col-md-6 text-center">
+                                <img src="assets/img/template-easy-customize.png" alt="" class="img-responsive">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="no-mb">
+                <div class="jumbotron">
+                    <div class="dark-mask"></div>
+                    <div class="container">
+                        <div class="row vertical_center_col">
+                            <div class="col-md-6 text-center">
+                                <img src="assets/img/template-easy-customize.png" alt="" class="img-responsive">
+                            </div>
+                            <div class="col-md-6">
+                                <h2 class="text-uppercase">ACCESORIOS DE INSTALACIÓN</h2>
+                                <p class="mb-small">La instalación de los sellos para muelles de carga se realiza de forma sencilla y rápida, ya que cuenta con accesorios que la facilitan y brindan un acabado estético de calidad.</p>
+                                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="no-mb">
+                <div class="jumbotron">
+                    <div class="dark-mask custom_dark_mask"></div>
+                    <div class="container">
+                        <div class="row vertical_center_col">
+                            <div class="col-md-6">
+                                <h2 class="text-uppercase">CUBIERTA REMOVIBLE</h2>
+                                <p class="mb-small">Las aletas de desgaste se encuentran dispuestas en una cubierta removible; con elementos de fijación de alta calidad. Lo cual permite el reemplazo de partes por daño o desgaste, sin realizar el desmonte del sello.</p>
+                                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a>
+                                </p>
+                            </div>
+                            <div class="col-md-6 text-center">
+                                <img src="assets/img/template-easy-customize.png" alt="" class="img-responsive">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="no-mb">
+                <div class="jumbotron">
+                    <div class="dark-mask"></div>
+                    <div class="container">
+                        <div class="row vertical_center_col">
+                            <div class="col-sm-12 text-center">
+                                <h2 class="text-uppercase">GAMA DE COLORES</h2>
+                                <p class="mb-small">La fabricación de los sellos se realiza con cada combinación posible que se desee, de dos colores.</p>
+                            </div>
+                        </div>
+                        <div class="row vertical_center_col">
+                            <div class="col-md-12 text-center">
+                                <img src="assets/img/template-easy-customize.png" alt="" class="img-responsive" style="display: inline;">
+                                <br>
+                                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a> </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- *** JUMBOTRON END *** -->
+            </section>
+        </div>
+        <div role="tabpanel" class="tab-pane" id="puerta_rapida">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        </div>
+        <div role="tabpanel" class="tab-pane" id="abrigo_muelle">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passage..
+        </div>
+    </div>
+</div>
