--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1,1 +1,34 @@
 /* your styles go here */
+@media (min-width: 992px){
+.vertical_center_col {
+display: flex;
+align-items: center;
+}
+}
+@media (max-width: 991px) and (min-width: 768px){
+.vertical_center_col {
+display: block;
+margin-left: auto;
+margin-right: auto;
+}
+}
+.custom_dark_mask{
+background: #6d4e4e !important;
+}
+
+
+
+.nav-tabs{ border-bottom: 2px solid #DDD !important;  text-align: center !important;}
+
+.nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover { border-width: 0;  border: none !important;}
+.nav-tabs > li > a { border: none !important; color: #666 !important; }
+.nav-tabs > li.active > a, .nav-tabs > li > a:hover { border: none; color: #4285F4 !important; background: transparent; }
+.nav-tabs > li > a::after { content: ""; background: #4285F4; height: 2px; position: absolute; width: 100%; left: 0px; bottom: -1px; transition: all 250ms ease 0s; transform: scale(0); }
+.nav-tabs > li.active > a::after, .nav-tabs > li:hover > a::after { transform: scale(1); }
+.nav-tabs > li {display: inline-block !important;float: none !important;}
+.tab-nav > li > a::after { background: #21527d none repeat scroll 0% 0%; color: #fff; }
+.tab-pane { padding: 15px 0 0 0; }
+.tab-content{padding:0px !important}
+.card {background: #FFF none repeat scroll 0% 0%; box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3); margin-bottom: 30px; margin-top: 30px;}
+body{ background: #EDECEC;}
+
