--- a/src/app/pages/products/doors/doors.component.html
+++ b/src/app/pages/products/doors/doors.component.html
@@ -3,10 +3,10 @@
     <ul class="nav nav-tabs" role="tablist">
         <li role="presentation" class="active"><a href="#sello_muelle" aria-controls="sello_muelle" role="tab" data-toggle="tab">Sellos para Muelle de carga</a>
         </li>
-        <li role="presentation"><a href="#puerta_rapida" aria-controls="puerta_rapida" role="tab" data-toggle="tab">Puerta Rápida Enrollable</a>
-        </li>
-        <li role="presentation"><a href="#abrigo_muelle" aria-controls="abrigo_muelle" role="tab" data-toggle="tab">Abrigos para Muelle de carga</a>
-        </li>
+        <li role="presentation"><a href="#puerta_rapida" aria-controls="puerta_rapida" role="tab" data-toggle="tab">Puerta Rápida Enrollable</a></li>
+        <!--
+        <li role="presentation"><a href="#abrigo_muelle" aria-controls="abrigo_muelle" role="tab" data-toggle="tab">Abrigos para Muelle de carga</a></li>
+        -->
     </ul>
     <!-- Tab panes -->
     <div class="tab-content">
@@ -128,8 +128,7 @@
                                 <h2 class="text-uppercase">COMPENSACIÓN DE DESNIVEL</h2>
                                 <p class="mb-small">La fabricación de cada sello para muelle de carga, se realiza especifícamente para satisfacer las condiciones de inclinación o declinación de la zona.</p>
                                 <br>
-                                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a>
-                                </p>
+                                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a></p>
                             </div>
                         </div>
                         <div class="row vertical_center_col">
@@ -148,8 +147,7 @@
                             <div class="col-md-6">
                                 <h2 class="text-uppercase">CUBIERTA REMOVIBLE</h2>
                                 <p class="mb-small">Las aletas de desgaste se encuentran dispuestas en una cubierta removible; con elementos de fijación de alta calidad. Lo cual permite el reemplazo de partes por daño o desgaste, sin realizar el desmonte del sello.</p>
-                                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a>
-                                </p>
+                                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a></p>
                             </div>
                             <div class="col-md-6 text-center">
                                 <img src="assets/img/template-easy-customize.png" alt="" class="img-responsive">
@@ -169,8 +167,7 @@
                             <div class="col-md-6">
                                 <h2 class="text-uppercase">ACCESORIOS DE INSTALACIÓN</h2>
                                 <p class="mb-small">La instalación de los sellos para muelles de carga se realiza de forma sencilla y rápida, ya que cuenta con accesorios que la facilitan y brindan un acabado estético de calidad.</p>
-                                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a>
-                                </p>
+                                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a></p>
                             </div>
                         </div>
                     </div>
@@ -184,8 +181,7 @@
                             <div class="col-md-6">
                                 <h2 class="text-uppercase">CUBIERTA REMOVIBLE</h2>
                                 <p class="mb-small">Las aletas de desgaste se encuentran dispuestas en una cubierta removible; con elementos de fijación de alta calidad. Lo cual permite el reemplazo de partes por daño o desgaste, sin realizar el desmonte del sello.</p>
-                                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a>
-                                </p>
+                                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a></p>
                             </div>
                             <div class="col-md-6 text-center">
                                 <img src="assets/img/template-easy-customize.png" alt="" class="img-responsive">
@@ -217,7 +213,211 @@
             </section>
         </div>
         <div role="tabpanel" class="tab-pane" id="puerta_rapida">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            <section class="no-mb">
+                <div class="jumbotron">
+                    <div class="dark-mask"></div>
+                    <div class="container">
+                        <div class="row mb-small">
+                            <div class="col-sm-12 text-center">
+                                <h1>PUERTA RÁPIDA ENROLLABLE</h1>
+                            </div>
+                        </div>
+                        <div class="row vertical_center_col">
+                            <div class="col-md-6 text-center">
+                                <img src="assets/img/template-easy-customize.png" alt="" class="img-responsive">
+                            </div>
+                            <div class="col-md-6">
+                                <h2 class="text-uppercase">¿Por qué usarlo?</h2>
+                                <p class="mb-small">En operaciones que requieren gran cantidad de flujo de personal, maquinaria y mercancía y altos niveles de seguridad en los pasajes, la Puerta Rápida Enrollable es la solución perfecta.</p>
+                                <br>
+                                <p class="mb-small">Ofrece una excelente resistencia en distintos escenarios de operación y una alta velocidad de apertura que permite un ritmo de trabajo sin interrupción. Es ideal para la separación de espacios con diferentes características y aplicaciones como mantener la cadena de frío, protección de vientos, amortiguación de ruidos, almacenes, muelles de carga, hospitales entre otros. Garantiza seguridad para la mercancía, el personal y la maquinaria en  ránsito.</p>
+                                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="no-mb">
+                <div class="jumbotron">
+                    <div class="dark-mask custom_dark_mask"></div>
+                    <div class="container">
+                        <div class="row vertical_center_col">
+                            <div class="col-md-12">
+                                <h2 class="text-uppercase">LONA</h2>
+                                <p class="mb-small">Compuesta de PVC flexible de alta calidad y resistencia por ambas caras, con un peso de 900gr/m2. Sus principales características entorno a la industria y la seguridad son:</p>
+                            </div>
+                        </div>
+                        <div class="row vertical_center_col">
+                            <div class="col-md-6">
+                                <ul type=d isk style="font-size: 21px; font-weight: 400">
+                                    <li> Impermeabilidad </li>
+                                    <br>
+                                    <li>Sellabilidad  </li>
+                                    <br>
+                                    <li> Resistencia a Rayos Solares UV </li>
+                                    <br>
+                                    <li> - Protección Biosida</li>
+                                    <br>
+                                </ul>
+                            </div>
+                            <div class="col-md-6">
+                                <ul type=d isk style="font-size: 21px; font-weight: 400">
+                                    <li>  Ignífuga</li>
+                                    <br>
+                                    <li>  Resistencia a Diversos productos
+                                        - Sellabilidad químicos
+                                    </li>
+                                    <br>
+                                    <li> Mirillas en PVC Cristal</li>
+                                    <br>
+                                </ul>
+                                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a></p>
+                            </div>
+                            <div class="col-md-6 text-center">
+                                <img src="assets/img/template-easy-customize.png" alt="" class="img-responsive">
+                                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="no-mb">
+                <div class="jumbotron">
+                    <div class="dark-mask"></div>
+                    <div class="container">
+                        <div class="row vertical_center_col">
+                            <div class="col-md-12">
+                                <h2 class="text-uppercase">CONTROL</h2>
+                                <p class="mb-small">La Puerta Rápida Enrollable cuenta con distintos sistemas de control</p>
+                            </div>
+                        </div>
+                        <div class="row vertical_center_col">
+                            <div class="col-md-6 text-center">
+                                <img src="assets/img/template-easy-customize.png" alt="" class="img-responsive">
+                            </div>
+                            <div class="col-md-6">
+                                <h3 class="text-uppercase">Pulsadores</h3>
+                                <p class="mb-small">El sistema de control se instala a un costado de la puerta y constituye pulsadores para:</p>
+                                <ul type=d isk style="font-size: 21px; font-weight: 400">
+                                    <li> Subir </li>
+                                    <li> Bajar  </li>
+                                    <li> Detener </li>
+                                    <li> Hongo de seguridad </li>
+                                </ul>
+                            </div>
+                            <div class="col-md-6">
+                                <h3 class="text-uppercase">Manual</h3>
+                                <p class="mb-small">Se encuentra acoplado directamente al motor que controla la puerta y es accionado implementando una llave bristol 3/16”, para enrollar o desenrollar el telón.</p>
+                            </div>
+                            <div class="col-md-6">
+                                <h3 class="text-uppercase">Automático</h3>
+                                <p class="mb-small">Posee un sensor de presencia en el cabezal de
+                                    la puerta para personal y
+                                    maquinaria, que permite la apertura de la misma. Es opcional colocarlo en ambos lados de la puerta.
+                                </p>
+                            </div>
+                        </div>
+                        <p><a href="/quotation" class="btn btn-template-main">Cotizar</a></p>
+                    </div>
+                </div>
+            </section>
+            <section class="no-mb">
+                <div class="jumbotron">
+                    <div class="dark-mask custom_dark_mask"></div>
+                    <div class="container">
+                        <div class="row vertical_center_col">
+                            <div class="col-md-12">
+                                <h2 class="text-uppercase">ACCESORIOS</h2>
+                                <p class="mb-small">Las solapas de desgaste se encuentran disponibles con una exposición de:</p>
+                                <br>
+                            </div>
+                        </div>
+                        <div class="row vertical_center_col">
+                            <div class="col-md-6">
+                                <ul class="list-inline" type="disk" style="font-size: 21px; font-weight: 400">
+                                    <li>
+                                        <strong>
+                                            <h3> Interruptor de Tirador</h3>
+                                        </strong>
+                                        La puerta se abre cuando se hala de una cuerda
+                                        situada encima de ésta. 
+                                    </li>
+                                    <li>
+                                        <strong>
+                                            <h3> Mando a Distancia</h3>
+                                        </strong>
+                                        Capacidad de 15 mandos por puerta a una distancia
+                                        máx de 152 m 
+                                    </li>
+                                    <li>
+                                        <strong>
+                                            <h3>Fotocélulas</h3>
+                                        </strong>
+                                        La puerta se abre cuando se interrumpe el haz de las
+                                        fotocélulas, situadas frente a la puerta. 
+                                    </li>
+                                    <li>
+                                        <strong>
+                                            <h3>Apertura / Cierre parcial</h3>
+                                        </strong>
+                                        (Apertura parcial para paso peatonal y
+                                        apertura completa para paso de maquinaria y/o mercancía)
+                                    </li>
+                                </ul>
+                                <br>
+                            </div>
+                            <div class="col-md-6 text-center">
+                                <ul class="list-inline" type="disk" style="font-size: 21px; font-weight: 400">
+                                    <li>
+                                        <strong>
+                                            <h3>Apertura / Cierre mientras se mantiene el pulsador </h3>
+                                        </strong>
+                                    </li>
+                                    <li>
+                                        <strong>
+                                            <h3>Luces de Aviso</h3>
+                                        </strong>
+                                        Indica el estado actual de la puerta, dependiendo del color
+                                        y permanencia de la luz (intermitencia o no) 
+                                    </li>
+                                    <li>
+                                        <strong>
+                                            <h3>Señal Acústica </h3>
+                                        </strong>
+                                        Se emite un sonido durante el movimiento de la puerta. 
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="row vertical_center_col">
+                            <div class="col-md-6">
+                                <img src="assets/img/template-easy-customize.png" alt="" class="img-responsive">
+                                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a></p>
+                            </div>
+                            <div class="col-md-6">
+                                <img src="assets/img/template-easy-customize.png" alt="" class="img-responsive">
+                            </div>
+                            <div class="col-md-6">
+                                <img src="assets/img/template-easy-customize.png" alt="" class="img-responsive">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="no-mb">
+                <div class="jumbotron">
+                    <div class="dark-mask"></div>
+                    <div class="container">
+                        <div class="row vertical_center_col">
+                            <div class="col-sm-12 text-center">
+                                <h2 class="text-uppercase">GAMA DE COLORESL</h2>
+                                <img src="assets/img/template-easy-customize.png" alt="" class="img-responsive">
+                                <p><a href="/quotation" class="btn btn-template-main">Cotizar</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
         <div role="tabpanel" class="tab-pane" id="abrigo_muelle">
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passage..
