add test images

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -20,12 +20,8 @@ _________________________________________________________ -->
         </div>
 
         <div class="col-sm-6 text-center-xs">
-          <p class="text-uppercase">Business. Corporate. Agency.
-            <br />Portfolio. Blog. E-commerce.
-            <br />We have covered everything.</p>
-          <p>See our current packages comparison
-            <br />to choose the right one for you.</p>
-          <p><a href="#packages" class="scroll-to btn btn-template-transparent-black">See packages</a>
+          <p class="text-uppercase">Recibe tu cotización en pocos minutos gracias a nuestra plataforma automatizada
+          <p><a href="/quotation" class="scroll-to btn btn-template-transparent-black">Cotizar</a>
           </p>
 
         </div>
@@ -35,239 +31,80 @@ _________________________________________________________ -->
 
   <!-- *** JUMBOTRON END *** -->
 </section>
-
-<section class="bar background-gray no-mb padding-big text-center-sm">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <h2 class="text-uppercase">RELLENA EL FORMULARIO</h2>
-        <p class="lead mb-small">40+ prepared HTML templates</p>
-        <p class="mb-small">We have prepared literally <strong>everything you would possibly need building corporate, e-commerce or portfolio website</strong>. If you still miss something, let us know and we will try to include it in theme's future updates.</p>
-
-        <p><a href="#" class="btn btn-template-main">Read more</a>
-        </p>
-      </div>
-      <div class="col-md-6 text-center">
-        <img src="assets/img/template-easy-customize.png" alt="" class="img-responsive">
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="bar no-mb color-white padding-big text-center-sm">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 text-center">
-        <img src="assets/img/template-easy-code.png" alt="" class="img-responsive">
-      </div>
-      <div class="col-md-6">
-        <h2 class="text-uppercase">Espera unos segundos </h2>
-        <p class="lead mb-small">Nuestro sistema automatizado iniciara tan pronto pueda a resolver tu solicitud</p>
-        <p class="mb-small">Everything in this template is properly named and categorized. In case you don't find in the documentation answer to your question, our support is here to help!</p>
-
-        <p><a href="#" class="btn btn-template-transparent-primary">Read more</a>
-        </p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="bar background-gray no-mb padding-big text-center-sm">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <h2 class="text-uppercase">Revisa tu bandeja de entrada</h2>
-        <p class="mb-small">We have made this template with focus on future client customization. You get <strong>40+ prepared HTML templates</strong>, many <strong>reusable components</strong> and <strong>LESS files</strong> for even easier template customization.</p>
-
-        <p><a href="#" class="btn btn-template-main">Read more</a>
-        </p>
-      </div>
-      <div class="col-md-6 text-center">
-        <img src="assets/img/template-easy-customize.png" alt="" class="img-responsive">
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="bar background-white no-mb" id="packages">
-  <div class="container" data-animate="fadeInUp">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="heading text-center">
-          <h2>Packages we offer</h2>
-        </div>
-
-        <p class="lead">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-
-        <div class="row packages">
-
-          <div class="col-md-3">
-            <div class="package ">
-              <div class="package-header light-gray">
-                <h5>Basic</h5>
-              </div>
-              <div class="price">
-                <div class="price-container">
-                  <h4><span class="currency">$</span>7</h4>
-                  <span class="period">
-
-/ month
-
-</span>
+<section class="no-mb">
+                <div class="jumbotron">
+                    <div class="dark-mask custom_dark_mask"></div>
+                    <div class="container">
+                        <div class="row vertical_center_col">
+                            <div class="col-md-6">
+                                <h2 class="text-uppercase">Puertas Rapidas</h2>
+                                <ul type=d isk style="font-size: 21px; font-weight: 400">
+                                    <li> Puerta Rápida Enrollable. </li>
+                                    <br>
+                                    <li> Puerta Seccional. </li>
+                                    <br>
+                                    <li> Sellos para Muelle de carga. </li>
+                                    <br>
+                                    <li> Abrigos para Muelle de carga. </li>
+                                    <br>
+                                </ul>
+                                <p><a href="/products/doors" class="btn btn-template-main">Más información</a>
+                                </p>
+                            </div>
+                            <div class="col-md-6 text-center">
+                                <img src="assets/img/template-easy-code.png" alt="" class="img-responsive">
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <ul>
-                <li><i class="fa fa-check"></i>100GB Storage</li>
-                <li><i class="fa fa-check"></i>Own config file</li>
-                <li><i class="fa fa-times"></i>Sharing Tools</li>
-                <li><i class="fa fa-times"></i>Auto Backup</li>
-                <li><i class="fa fa-times"></i>Extended Security</li>
-              </ul>
-              <a href="#" class="btn btn-template-main">
+            </section>
 
-Sign Up </a>
-            </div>
-          </div>
-          <!-- / END FIRST PACKAGE -->
-
-          <div class="col-md-3">
-            <div class="package ">
-              <div class="package-header light-gray">
-                <h5>Standard</h5>
-              </div>
-              <div class="price">
-                <div class="price-container">
-                  <h4><span class="currency">$</span>21 </h4>
-                  <span class="period">/ month</span>
+<section class="no-mb">
+                <div class="jumbotron">
+                    <div class="dark-mask"></div>
+                    <div class="container">
+                        <div class="row vertical_center_col">
+                            <div class="col-md-6 text-center">
+                                <img src="assets/img/template-easy-code.png" alt="" class="img-responsive">
+                            </div>
+                            <div class="col-md-6">
+                                <h2 class="text-uppercase">Maquinas para trabajo pesado</h2>
+                                <ul type=d isk style="font-size: 21px; font-weight: 400">
+                                    <li> Diferentes Modelos. </li>
+                                    <br>
+                                    <li> Documentación. </li>
+                                    <br>
+                                    <li> Ubicación de la maquina. </li>
+                                    <br>
+                                    <li> Nuevas y usadas. </li>
+                                    <br>
+                                </ul>
+                                <p><a href="/products/machinery" class="btn btn-template-main">Más información</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <ul>
-                <li><i class="fa fa-check"></i>100GB Storage</li>
-                <li><i class="fa fa-check"></i>Own config file</li>
-                <li><i class="fa fa-times"></i>Sharing Tools</li>
-                <li><i class="fa fa-times"></i>Auto Backup</li>
-                <li><i class="fa fa-times"></i>Extended Security</li>
-              </ul>
-              <a href="#" class="btn btn-template-main">
+            </section>
 
-Sign Up </a>
-            </div>
-          </div>
-
-          <div class="col-md-3">
-            <div class="best-value">
-              <div class="package">
-                <div class="package-header">
-                  <h5>Premium</h5>
-                  <div class="meta-text">
-                    Best Value
-                  </div>
+<section class="no-mb">
+                <div class="jumbotron">
+                    <div class="dark-mask custom_dark_mask"></div>
+                    <div class="container">
+                        <div class="row vertical_center_col">
+                            <div class="col-md-6">
+                                <h2 class="text-uppercase">Fichas de lego para armar modelos</h2>
+                                <ul type=d isk style="font-size: 21px; font-weight: 400">
+                                    <li> Mural Lego. </li>
+                                    <br>
+                                </ul>
+                                <p><a href="/products/legos" class="btn btn-template-main">Más información</a>
+                                </p>
+                            </div>
+                            <div class="col-md-6 text-center">
+                                <img src="assets/img/template-easy-code.png" alt="" class="img-responsive">
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="price">
-                  <h4><span class="currency">$</span>53</h4>
-                  <span class="period">/ month</span>
-                </div>
-                <ul>
-                  <li><i class="fa fa-check"></i>100GB Storage</li>
-                  <li><i class="fa fa-check"></i>Own config file</li>
-                  <li><i class="fa fa-times"></i>Sharing Tools</li>
-                  <li><i class="fa fa-times"></i>Auto Backup</li>
-                  <li><i class="fa fa-times"></i>Extended Security</li>
-                </ul>
-                <a href="#" class="btn btn-template-main">
-
-Sign Up </a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3">
-            <div class="package">
-              <div class="package-header light-gray">
-                <h5>Ultimate</h5>
-              </div>
-              <div class="price">
-                <h4><span class="currency">$</span>99 </h4>
-                <span class="period">/ month</span>
-              </div>
-              <ul>
-                <li><i class="fa fa-check"></i>100GB Storage</li>
-                <li><i class="fa fa-check"></i>Own config file</li>
-                <li><i class="fa fa-times"></i>Sharing Tools</li>
-                <li><i class="fa fa-times"></i>Auto Backup</li>
-                <li><i class="fa fa-times"></i>Extended Security</li>
-              </ul>
-              <a href="#" class="btn btn-template-main">
-
-Sign Up </a>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </div>
-</section>
-
-
-<div class="bs-example">
-    <div id="myCarousel" class="carousel slide" data-interval="2000" data-ride="carousel">
-    	<!-- Carousel indicators -->
-        
-        <!-- Wrapper for carousel items -->
-        <div class="carousel-inner">
-            <div class="active item">
-                <img src="https://jaxenter.com/wp-content/uploads/2016/12/angular.png" alt="First Slide">
-         		<div class="carousel-caption">
-                  
-                  <h3>Angular 4</h3>
-                  
-                  
-                </div>
-            </div>
-            <div class="item">
-                <img class ="size-image" src="http://codig0latino.com/wp-content/uploads/2015/09/Python-3-4-0-Beta-2-Now-Available-for-Download-417591-21.png" alt="Second Slide">
-                <div class="carousel-caption">
-                  
-                  <p>El lenguaje de programación simple y libre.</p>
-                  
-                </div>
-            </div>
-            <div class="item">
-                <img    src="http://kforce.org.nz/thumbs/2000x2000r/2016-12/auto_desk_inventor.png" alt="Third Slide">
-                <div class="carousel-caption">
-              
-                  <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                </div>
-            </div>
-        </div>
-        <!-- Carousel controls -->
-        <a class="carousel-control left" href="#myCarousel" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-        </a>
-        <a class="carousel-control right" href="#myCarousel" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-        </a>
-    </div>
-</div>
-
-
-
-
-<section class="bar background-image-fixed-2 no-mb color-white text-center">
-  <div class="dark-mask"></div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="icon icon-lg"><i class="fa fa-file-code-o"></i>
-        </div>
-        <h1>Do you want to see more?</h1>
-        <p class="lead">We have prepared for you more than 40 different HTML pages, including 5 variations of homepage.</p>
-        <p class="text-center">
-          <a href="index3.html" class="btn btn-template-transparent-black btn-lg">Check other homepage</a>
-        </p>
-      </div>
-
-    </div>
-  </div>
-</section>
+            </section>
