--- a/src/app/pages/quotation/quotation.component.html
+++ b/src/app/pages/quotation/quotation.component.html
@@ -9,48 +9,156 @@
 
   <div class="row">
     <div class="col-xs-12 col-sm-3">
-      <ul class="nav nav-pills nav-stacked">
+      <ul class="nav nav-pills nav-stacked ul-with-border">
         <li *ngFor="let productType of productTypes" [ngClass]="{active: productType == selectedProductType }">
           <a href="javascript: void(0);" (click)="selectProductType(productType)">{{ productType.name }}</a>
         </li>
       </ul>
     </div>
     <div class="col-xs-12 col-sm-9">
-      <div class="with-borders border-flat" *ngIf="selectedProductType">
-        <div class="jumbotron quotation-jumbotron">
-          <h1>{{ selectedProductType.name }}</h1>
-          <p>{{ selectedProductType.description }}</p>
+      <div *ngIf="!selectedProductType">
+        <div class="alert alert-info">
+          <p class="text-strong">Seleccione un Tipo de Producto</p>
+          <p>Para continuar con la cotización debe primero seleccionar un tipo de producto que desee cotizar.</p>
         </div>
-        <div class="row">
-          <div class="col-xs-12 col-sm-6">
-            <label class="control-label text-strong">Producto: </label>
-            <select class="form-control" [(ngModel)]="selectedProduct" (ngModelChange)="selectProduct(selectedProduct)">
-              <option *ngFor="let product of selectedProductType.products" [ngValue]="product">{{ product.name }}</option>
-            </select>
-          </div>
-        </div>
-        <div class="clearfix"></div>
-        <br>
-        <div class="well well-sm form" *ngIf="showProductProperties && selectedProduct">
-          <div *ngFor="let property of selectedProduct.properties; let idx = index">
-            <div class="clearfix" *ngIf="idx % 2 === 0"></div>
-            <div class="col-xs-12 col-sm-6">
-              <div class="form-group">
-                <label class="control-label">{{ property.name }}</label>
-                <input type="number" class="form-control" *ngIf="property.type !== 'bool'" />
-                <label *ngIf="property.type === 'bool'"><input type="radio"> Si</label>
-                <label *ngIf="property.type === 'bool'"><input type="radio"> No</label>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12">
-            <button type="button" class="btn btn-template-main pull-right">Solicitar Cotización</button>
-          </div>
-          <div class="clearfix"></div>
-        </div>
-        <div class="clearfix"></div>
       </div>
+      <div *ngIf="selectedProductType">
+        <h2>{{ selectedProductType.name }} <br><small>{{ selectedProductType.description }}</small></h2>
 
+        <mat-horizontal-stepper>
+          <mat-step [stepControl]="productForm" label="Información de Producto">
+            <div class="stepper-box">
+              <div class="col-xs-12">
+                <h3 class="text-center">Información de Producto</h3>
+              </div>
+              <div class="col-xs-12">
+                <mat-form-field>
+                  <mat-select placeholder="Producto" [(value)]="selectedProduct" (change)="selectProduct($event.value)" [required]="true">
+                    <mat-option *ngFor="let product of selectedProductType.products" [value]="product">
+                      {{ product.name }}
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+              <div class="col-xs-12">
+                <h4 *ngIf="selectedProduct !== null && showProductForm">Características de Producto</h4>
+              </div>
+              <div class="quotation-form-box" *ngIf="selectedProduct !== null && showProductForm">
+                <form class="form" [formGroup]="productForm" novalidate>
+                  <div *ngFor="let property of selectedProduct.properties">
+                    <div class="clearfix" *ngIf="property.type === 'bool'"></div>
+                    <div class="col-xs-12 col-sm-6">
+                      <mat-form-field class="full-width" *ngIf="property.type === 'integer' || property.type === 'list'">
+                        <input matInput class="full-width" *ngIf="property.type === 'integer'" [formControlName]="property.name" type="number" [placeholder]="property.name" [min]="property.values[0]" [max]="property.values[1]" />
+                        <mat-select *ngIf="property.type === 'list'" [formControlName]="property.name" [placeholder]="property.name" [(value)]="property.value">
+                          <mat-option *ngFor="let option of property.values" [value]="option">
+                            {{ option.name }}
+                          </mat-option>
+                        </mat-select>
+                      </mat-form-field>
+                      <mat-slide-toggle color="primary" class="full-width" [formControlName]="property.name" *ngIf="property.type === 'bool'">
+                        {{ property.name }}
+                      </mat-slide-toggle>
+                    </div>
+                  </div>
+                </form>
+                <div class="col-xs-12">
+                  <button mat-raised-button matStepperNext color="primary" [disabled]="productForm.invalid" class="pull-right">Siguiente</button>
+                </div>
+                <div class="clearfix"></div>
+              </div>
+              <div class="clearfix"></div>
+            </div>
+          </mat-step>
+          <mat-step label="Información de Cotización">
+            <div class="stepper-box">
+              <div class="quotation-form-box">
+                <form class="form" [formGroup]="quotationForm" novalidate>
+                  <div class="col-xs-12">
+                    <div class="col-xs-12">
+                      <h3 class="text-center">Información de Cotización</h3>
+                      <h4>Información General</h4>
+                    </div>
+                    <div class="col-xs-12 col-sm-6">
+                      <mat-form-field class="full-width">
+                        <input matInput class="full-width" formControlName="firstName" type="text" placeholder="Nombres" />
+                      </mat-form-field>
+                    </div>
+                    <div class="col-xs-12 col-sm-6">
+                      <mat-form-field class="full-width">
+                        <input matInput class="full-width" formControlName="lastName" type="text" placeholder="Apellidos" />
+                      </mat-form-field>
+                    </div>
+                    <div class="col-xs-12 col-sm-6">
+                      <mat-form-field class="full-width">
+                        <input matInput class="full-width" formControlName="identification" type="text" placeholder="Documento de Identidad" />
+                      </mat-form-field>
+                    </div>
+                    <div class="col-xs-12 col-sm-6">
+                      <mat-form-field class="full-width">
+                        <input matInput class="full-width" formControlName="address" type="text" placeholder="Dirección" />
+                      </mat-form-field>
+                    </div>
+                    <div class="col-xs-12 col-sm-6">
+                      <mat-form-field class="full-width">
+                        <input matInput class="full-width" formControlName="phone" type="text" placeholder="Teléfono" />
+                      </mat-form-field>
+                    </div>
+                    <div class="col-xs-12 col-sm-6">
+                      <mat-form-field class="full-width">
+                        <input matInput class="full-width" formControlName="email" type="text" placeholder="Correo Electrónico" />
+                      </mat-form-field>
+                    </div>
+                  </div>
+                  <div class="clearfix"></div>
+                  <br>
+                  <div class="col-xs-12">
+                    <div class="col-xs-12">
+                      <h4>Información de Empresa</h4>
+                    </div>
+                    <div class="col-xs-12 col-sm-6">
+                      <mat-form-field class="full-width">
+                        <input matInput class="full-width" formControlName="company" type="text" placeholder="Empresa" />
+                      </mat-form-field>
+                    </div>
+                    <div class="col-xs-12 col-sm-6">
+                      <mat-form-field class="full-width">
+                        <input matInput class="full-width" formControlName="companyIdentification" type="text" placeholder="NIT" />
+                      </mat-form-field>
+                    </div>
+                    <div class="col-xs-12 col-sm-6">
+                      <mat-form-field class="full-width">
+                        <input matInput class="full-width" formControlName="companyRole" type="text" placeholder="Rol en la compañia" />
+                      </mat-form-field>
+                    </div>
+                  </div>
+                  <div class="clearfix"></div>
+                  <div class="col-xs-12">
+                    <button mat-raised-button matStepperPrevious>Anterior</button>
+                    <button mat-raised-button matStepperNext color="primary" [disabled]="false" class="pull-right">Siguiente</button>
+                    <div class="clearfix"></div>
+                  </div>
+                </form>
+              </div>
+              <div class="clearfix"></div>
+            </div>
+            <div class="clearfix"></div>
+          </mat-step>
+          <mat-step label="Completar Cotización">
+            <div class="col-xs-12">
+              <h3>Completar Cotización</h3>
+              <p>Para completar el proceso de cotización, haga clic en el botón "Finalizar" de la parte inferior.</p>
+            </div>
+            <div class="clearfix"></div>
+            <br><br>
+            <div class="col-xs-12">
+              <button mat-raised-button matStepperPrevious>Anterior</button>
+              <button mat-raised-button matStepperNext color="primary" [disabled]="false" class="pull-right">Terminar</button>
+              <div class="clearfix"></div>
+            </div>
+          </mat-step>
+        </mat-horizontal-stepper>
+      </div>
     </div>
   </div>
 </div>
