working in style of profile

--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -1,3 +1,186 @@
-<p>
-  profile works!
-</p>
+<div id="heading-breadcrumbs">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-7">
+        <h1>Mi perfil</h1>
+      </div>
+      <div class="col-md-5">
+        <ul class="breadcrumb">
+
+          <li><a href="index.html">Home</a>
+          </li>
+          <li>Profile</li>
+        </ul>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+
+  <div class="row">
+    <div class="col-md-3">
+
+      <div class="profile text-center">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRWuQH3vlB_boW7QuW_SNwYpF5IDBbUlmVhG-RjWhRe_JV3LiJJTg" alt="ProfileIcon" style="width:100%">
+        <div class="heading">
+          <h2>{{dataUser.firstName}} {{dataUser.lastName}}</h2>
+        </div>
+
+        <h4>CEO & Founder, Example</h4>
+        <p>Harvard University</p>
+
+      </div>
+    </div>
+    <!-- *** LEFT COLUMN ***
+			 _________________________________________________________ -->
+
+    <div class="col-md-9 clearfix" id="customer-account">
+
+      <p class="lead">Change your personal details or your password here.</p>
+      <p class="text-muted">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+
+      <div class="box">
+
+        <div class="heading">
+          <h3 class="text-uppercase">Change password</h3>
+        </div>
+
+        <form>
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label for="password_old">Old password</label>
+                <input type="password" class="form-control" id="password_old">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label for="password_1">New password</label>
+                <input type="password" class="form-control" id="password_1">
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label for="password_2">Retype new password</label>
+                <input type="password" class="form-control" id="password_2">
+              </div>
+            </div>
+          </div>
+          <!-- /.row -->
+
+          <div class="text-center">
+            <button type="submit" class="btn btn-template-main"><i class="fa fa-save"></i> Save new password</button>
+          </div>
+        </form>
+
+      </div>
+      <!-- /.box -->
+
+
+      <div class="box clearfix">
+        <div class="heading">
+          <h3 class="text-uppercase">Personal details</h3>
+        </div>
+
+        <form>
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label for="firstname">Firstname</label>
+                <input type="text" class="form-control" id="firstname">
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label for="lastname">Lastname</label>
+                <input type="text" class="form-control" id="lastname">
+              </div>
+            </div>
+          </div>
+          <!-- /.row -->
+
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label for="company">Company</label>
+                <input type="text" class="form-control" id="company">
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label for="street">Street</label>
+                <input type="text" class="form-control" id="street">
+              </div>
+            </div>
+          </div>
+          <!-- /.row -->
+
+          <div class="row">
+            <div class="col-sm-6 col-md-3">
+              <div class="form-group">
+                <label for="city">Company</label>
+                <input type="text" class="form-control" id="city">
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-3">
+              <div class="form-group">
+                <label for="zip">ZIP</label>
+                <input type="text" class="form-control" id="zip">
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-3">
+              <div class="form-group">
+                <label for="state">State</label>
+                <select class="form-control" id="state"></select>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-3">
+              <div class="form-group">
+                <label for="country">Country</label>
+                <select class="form-control" id="country"></select>
+              </div>
+            </div>
+
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label for="phone">Telephone</label>
+                <input type="text" class="form-control" id="phone">
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label for="email_account">Email</label>
+                <input type="text" class="form-control" id="email_account">
+              </div>
+            </div>
+            <div class="col-sm-12 text-center">
+              <button type="submit" class="btn btn-template-main"><i class="fa fa-save"></i> Save changes</button>
+
+            </div>
+
+          </div>
+
+        </form>
+
+      </div>
+
+    </div>
+    <!-- /.col-md-9 -->
+
+    <!-- *** LEFT COLUMN END *** -->
+
+    <!-- *** RIGHT COLUMN ***
+			 _________________________________________________________ -->
+
+
+
+    <!-- *** RIGHT COLUMN END *** -->
+
+  </div>
+  <!-- /.row -->
+
+</div>
